# src/routes/daily/swagger.yml
@@ -97,6 +97,18 @@ definitions:
         required: true
         schema:
           type: integer
+      - in: query
+        name: startDate
+        description: YYYY-MM-DD
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: endDate
+        description: YYYY-MM-DD
+        required: false
+        schema:
+          type: string
     responses:
       200:
         description: '하루동안 먹은 음식'
@@ -104,7 +116,15 @@ definitions:
           application/json:
             example:
               status: 200
-              message: '하루동안 먹은 음식을 불러왔습니다.'
+              message: '해당 기간동안 먹은 음식을 불러왔습니다.'
+      400:
+        description: '날짜 형식이 맞지 않는 경우'
+        content:
+          application/json:
+            example:
+              status: 400
+              message: '날짜를 제대로 입력해주세요.'
+              code: 'COMMON010'
       401:
         description: '비로그인으로 접근했을 경우'
         content:
